src/components/Layout.module.css
.container {
  margin: 0 auto;
  display: flex;
  align-items: center;
  flex-direction: column;
  height: 100%;
}

.mainBody {
  padding: 30px 0px;
  display: flex;
  min-height: 500px;
}
.border {
  width: 8px;
  height: auto;
  background-color: rgb(204, 211, 0);

  border-radius: 2px;
}

.mainContainer {
  width: 916px;
  height: auto;
  background-color: rgba(255, 255, 255, 0.9);
  padding: 20px 10px;
  margin: 0 4px;
  color: #000;

  border-radius: 2px;
}

